--- a/src/EShop.WebApp/Pages/Home.razor
+++ b/src/EShop.WebApp/Pages/Home.razor
@@ -1,7 +1,13 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<FluentGrid Justify="JustifyContent.Center">
+    @for (var i = 0; i < 20; i++)
+    {
+        <FluentGridItem>
+            <FluentCard Width="300px" Height="300px">
+                <p>Just some content in a card (with a button that does not do anything).</p>
+                <FluentButton Appearance="Appearance.Accent">Hello</FluentButton>
+            </FluentCard>
+        </FluentGridItem>
+    }
+</FluentGrid>
