feat: CoreClient, service api, base html

--- a/src/EShop.WebApp/App.razor
+++ b/src/EShop.WebApp/App.razor
@@ -1,4 +1,5 @@
 ﻿@using EShop.WebApp.Layout.Mainlayout
+@using EShop.WebApp.Pages.Common
 
 <Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
@@ -8,7 +9,7 @@
     <NotFound>
         <PageTitle>Not found</PageTitle>
         <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
+            <NotFound />
         </LayoutView>
     </NotFound>
 </Router>
