--- a/src/EShop.WebApp/Components/Product/ProductCart.razor
+++ b/src/EShop.WebApp/Components/Product/ProductCart.razor
@@ -9,7 +9,7 @@
     </div>
     <div class="pt-6">
         <div class="mb-4 gap-4 flex items-center justify-between">
-            <span class="me-2 bg-primary-100 px-2.5 py-0.5 text-primary-800 rounded text-xs font-medium dark:bg-primary-900 dark:text-primary-300">
+            <span class="me-2 bg-blue-100 px-2.5 py-0.5 text-blue-800 rounded text-xs font-medium dark:bg-blue-900 dark:text-blue-300">
                 Up to 35% off
             </span>
 
@@ -50,40 +50,24 @@
         </div>
 
         <a href="#" class="text-gray-900 text-lg font-semibold leading-tight hover:underline dark:text-white">
-            Apple
-            iMac 27", 1TB HDD, Retina 5K Display, M3 Max
+            @*   Apple
+            iMac 27", 1TB HDD, Retina 5K Display, M3 Max *@
+            @ProductName
         </a>
 
         <div class="mt-2 gap-2 flex items-center">
             <div class="flex items-center">
-                <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                     fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
-                </svg>
-
-                <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                     fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
-                </svg>
-
-                <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                     fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
-                </svg>
-
-                <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                     fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
-                </svg>
-
-                <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                     fill="currentColor" viewBox="0 0 24 24">
-                    <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
-                </svg>
+                @for (var i = 0; i < Rating; i++)
+                {
+                    <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
+                         fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
+                    </svg>
+                }
             </div>
 
-            <p class="text-gray-900 text-sm font-medium dark:text-white">5.0</p>
-            <p class="text-gray-500 text-sm font-medium dark:text-gray-400">(455)</p>
+            <p class="text-gray-900 text-sm font-medium dark:text-white">@Rating</p>
+            <p class="text-gray-500 text-sm font-medium dark:text-gray-400">(@RatingCount)</p>
         </div>
 
         <ul class="mt-2 gap-4 flex items-center">
@@ -107,17 +91,32 @@
         </ul>
 
         <div class="mt-4 gap-4 flex items-center justify-between">
-            <p class="text-gray-900 text-2xl font-extrabold leading-tight dark:text-white">$1,699</p>
+            <p class="text-gray-900 text-2xl font-extrabold leading-tight dark:text-white">@Price</p>
 
-            <button type="button"
-                    class="bg-primary-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
-                <svg class="-ms-2 me-2 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
-                     height="24" fill="none" viewBox="0 0 24 24">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                          d="M4 4h1.5L8 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm.75-3H7.5M11 7H6.312M17 4v6m-3-3h6" />
+            <button type="button" class="bg-blue-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-sm font-medium hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
+                <svg class="-ms-2 me-2 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4h1.5L8 16m0 0h8m-8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm8 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm.75-3H7.5M11 7H6.312M17 4v6m-3-3h6"></path>
                 </svg>
                 Add to cart
             </button>
         </div>
     </div>
 </div>
+
+@code
+{
+    [Parameter, EditorRequired]
+    public int ProductId { get; set; }
+
+    [Parameter, EditorRequired]
+    public string ProductName { get; set; }
+
+    [Parameter, EditorRequired]
+    public int Rating { get; set; }
+
+    [Parameter, EditorRequired]
+    public int RatingCount { get; set; }
+
+    [Parameter, EditorRequired]
+    public string Price { get; set; }
+}
