--- a/src/EShop.WebApp/Pages/Home.razor
+++ b/src/EShop.WebApp/Pages/Home.razor
@@ -1,8 +1,17 @@
 ﻿@page "/"
 
+@using EShop.Shared.ResponseModels
+@using EShop.Shared.ResponseModels.Catalog
+@using EShop.WebApp.Core.CoreHttpClient
+@using EShop.WebApp.Models.Common
+@using EShop.WebApp.Services.AuthenticationService
+@using EShop.WebApp.Services.CatalogService
 @using EShop.WebApp.Components.Common
 @using EShop.WebApp.Components.Product
-@using EShop.WebApp.Models.Common
+
+@inject IAuthenticationService AuthenticationService
+@inject ICoreHttpClient CoreHttpClient
+@inject ICatalogService CatalogService
 
 <section class="bg-gray-50 py-8 antialiased dark:bg-gray-900 md:py-12">
     <div class="px-4 mx-auto max-w-screen-xl 2xl:px-0">
@@ -13,7 +22,8 @@
                 <h2 class="mt-3 text-gray-900 text-xl font-semibold dark:text-white sm:text-2xl">Electronics</h2>
             </div>
             <div class="space-x-4 flex items-center">
-                <button data-modal-toggle="filterModal" data-modal-target="filterModal" type="button"
+                <button @onclick="() => _visibleFilterModal = true"
+                        data-modal-toggle="filterModal" data-modal-target="filterModal" type="button"
                         class="border-gray-200 bg-white px-3 py-2 text-gray-900 flex w-full items-center justify-center rounded-lg border text-sm font-medium hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:outline-none focus:ring-4 focus:ring-gray-100 dark:border-gray-600 dark:bg-gray-800 dark:text-gray-400 sm:w-auto dark:hover:bg-gray-700 dark:hover:text-white dark:focus:ring-gray-700">
                     <svg class="-ms-0.5 me-2 h-4 w-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24"
                          height="24" fill="none" viewBox="0 0 24 24">
@@ -92,9 +102,13 @@
         </div>
 
         <div class="mb-4 gap-4 grid sm:grid-cols-2 md:mb-8 lg:grid-cols-3 xl:grid-cols-4">
-            @for (var i = 0; i < 20; i++)
+            @foreach (var product in productPaginationResponse.Data)
             {
-                <ProductCart />
+                <ProductCart ProductId="@product.Id"
+                             ProductName="@product.Name"
+                             Price="@product.Price.ToString("F3")"
+                             Rating="3"
+                             RatingCount="200" />
             }
         </div>
 
@@ -107,12 +121,14 @@
         </div>
     </div>
     <!-- Filter modal -->
-    <FilterModal />
+    <FilterModal @bind-Visible="@_visibleFilterModal" />
 </section>
 
 @code
 {
     private List<BreadcrumbItem> BreadcrumbItems;
+    private PaginationResponse<GetListProductResponse> productPaginationResponse;
+    private bool _visibleFilterModal;
 
     protected override async Task OnInitializedAsync()
     {
@@ -134,5 +150,12 @@
                 Url = "/",
             },
         };
+
+        productPaginationResponse = new()
+            {
+                Data = new List<GetListProductResponse>()
+            };
+
+        productPaginationResponse = await CatalogService.GetAllProducts();
     }
 }
