--- a/src/EShop.WebApp/Pages/User/SignIn.razor
+++ b/src/EShop.WebApp/Pages/User/SignIn.razor
@@ -2,6 +2,11 @@
 
 @layout EmptyLayout
 
+@using EShop.Shared.RequestModels.Identity
+@using EShop.WebApp.Services.IdentityService
+
+@inject IIdentityService IdentityService
+
 <div class="px-6 py-12 flex min-h-full flex-col justify-center lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
         <img class="h-10 mx-auto w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
@@ -9,11 +14,14 @@
     </div>
 
     <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-        <form class="space-y-6" action="#" method="POST">
+        <EditForm Model="@_signInRequest" class="space-y-6" OnValidSubmit="@ValidSubmit">
+            <DataAnnotationsValidator></DataAnnotationsValidator>
+
             <div>
                 <label for="email" class="text-gray-900 block text-sm font-medium leading-6">Email address</label>
                 <div class="mt-2">
-                    <input id="email" name="email" type="email" autocomplete="email" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <InputText @bind-Value="@_signInRequest.Email" id="email" name="email" type="email" autocomplete="email" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
+                    <ValidationMessage For="() => _signInRequest.Email"></ValidationMessage>
                 </div>
             </div>
 
@@ -25,18 +33,34 @@
                     </div>
                 </div>
                 <div class="mt-2">
-                    <input id="password" name="password" type="password" autocomplete="current-password" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                    <InputText @bind-Value="@_signInRequest.Password" id="password" name="password" type="password" autocomplete="current-password" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> </InputText>
+                    <ValidationMessage For="() => _signInRequest.Password"></ValidationMessage>
                 </div>
             </div>
 
             <div>
                 <button type="submit" class="bg-indigo-600 px-3 py-1.5 text-white flex w-full justify-center rounded-md text-sm font-semibold leading-6 shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Sign in</button>
             </div>
-        </form>
+        </EditForm>
 
         <p class="mt-10 text-gray-500 text-center text-sm">
             Not a member?
-            <a href="#" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Start a 14 day free trial</a>
+            <a href="/register" class="text-indigo-600 font-semibold leading-6 hover:text-indigo-500">Register</a>
         </p>
     </div>
 </div>
+
+@code
+{
+    private SignInRequest _signInRequest;
+
+    protected override void OnInitialized()
+    {
+        _signInRequest = new();
+    }
+
+    private async Task ValidSubmit()
+    {
+        await IdentityService.SignIn(_signInRequest);
+    }
+}
