--- a/src/EShop.WebApp/Layout/EmptyLayout.razor
+++ b/src/EShop.WebApp/Layout/EmptyLayout.razor
@@ -1,3 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@using EShop.WebApp.Components.Common
+
+@inherits LayoutComponentBase
+
+<Alerts></Alerts>
 
 @Body
