--- a/src/EShop.WebApp/Components/Common/Alert.razor
+++ b/src/EShop.WebApp/Components/Common/Alert.razor
@@ -1,96 +1,55 @@
 ﻿@using EShop.WebApp.Models.Enums
 
-<div class="space-y-4">
-    @switch (AlertType)
-    {
-        case AlertType.Primary:
-            <div class="p-4 bg-primary text-primary-foreground relative w-full rounded-lg border [&amp;>svg+div]:translate-y-[-3px] [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg]:text-foreground [&amp;>svg~*]:pl-7"
-                 role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="24"
-                     height="24"
-                     viewBox="0 0 24 24"
-                     fill="none"
-                     stroke="currentColor"
-                     stroke-width="2"
-                     stroke-linecap="round"
-                     stroke-linejoin="round"
-                     class="h-5 w-5 text-primary-foreground">
-                    <circle cx="12" cy="12" r="10"></circle>
-                    <path d="M12 16v-4"></path>
-                    <path d="M12 8h.01"></path>
-                </svg>
-                <h5 class="mb-1 text-primary-foreground font-medium leading-none tracking-tight">@Title</h5>
-                <div class="text-primary-foreground text-sm [&amp;_p]:leading-relaxed">
-                    @Content
-                </div>
+@switch (AlertType)
+{
+    case AlertType.Info:
+        <div class="p-4 mb-4 text-blue-800 border-blue-300 bg-blue-50 flex items-center rounded-lg border text-sm dark:bg-gray-800 dark:text-blue-400 dark:border-blue-800" role="alert">
+            <svg class="w-4 h-4 me-3 inline flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+            </svg>
+            <span class="sr-only">Info</span>
+            <div>
+                <span class="font-medium">@Title!</span> @Message
             </div>
-            break;
+        </div>
+        break;
 
-        case AlertType.Success:
-            <div class="p-4 bg-[#4ade80] text-success-foreground relative w-full rounded-lg border [&amp;>svg+div]:translate-y-[-3px] [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg]:text-foreground [&amp;>svg~*]:pl-7"
-                 role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="24"
-                     height="24"
-                     viewBox="0 0 24 24"
-                     fill="none"
-                     stroke="currentColor"
-                     stroke-width="2"
-                     stroke-linecap="round"
-                     stroke-linejoin="round"
-                     class="h-5 w-5 text-success-foreground">
-                    <path d="M20 6 9 17l-5-5"></path>
-                </svg>
-                <h5 class="mb-1 text-success-foreground font-medium leading-none tracking-tight">Success Alert</h5>
-                <div class="text-success-foreground text-sm [&amp;_p]:leading-relaxed">
-                    This is a success alert with an icon, title, and description.
-                </div>
+    case AlertType.Success:
+        <div class="p-4 mb-4 text-green-800 border-green-300 bg-green-50 flex items-center rounded-lg border text-sm dark:bg-gray-800 dark:text-green-400 dark:border-green-800" role="alert">
+            <svg class="w-4 h-4 me-3 inline flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 1.5a8.5 8.5 0 1 0 8.5 8.5A8.51 8.51 0 0 0 10 1.5ZM8.7 13.7a1 1 0 0 1-1.42 0l-2-2a1 1 0 0 1 1.42-1.42L8 11.58l4.3-4.3a1 1 0 1 1 1.42 1.42Z" />
+            </svg>
+            <span class="sr-only">Success</span>
+            <div>
+                <span class="font-medium">@Title!</span> @Message
             </div>
-            break;
+        </div>
+        break;
 
-        case AlertType.Warning:
-            <div class="p-4 bg-[#fbbf24] text-warning-foreground relative w-full rounded-lg border [&amp;>svg+div]:translate-y-[-3px] [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg]:text-foreground [&amp;>svg~*]:pl-7"
-                 role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="24"
-                     height="24"
-                     viewBox="0 0 24 24"
-                     fill="none"
-                     stroke="currentColor"
-                     stroke-width="2"
-                     stroke-linecap="round"
-                     stroke-linejoin="round"
-                     class="h-5 w-5 text-warning-foreground">
-                    <path d="M13.73 4a2 2 0 0 0-3.46 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"></path>
-                </svg>
-                <h5 class="mb-1 text-warning-foreground font-medium leading-none tracking-tight">Warning Alert</h5>
-                <div class="text-warning-foreground text-sm [&amp;_p]:leading-relaxed">
-                    This is a warning alert with an icon, title, and description.
-                </div>
+    case AlertType.Warning:
+        <div class="p-4 mb-4 text-yellow-800 border-yellow-300 bg-yellow-50 flex items-center rounded-lg border text-sm dark:bg-gray-800 dark:text-yellow-300 dark:border-yellow-800" role="alert">
+            <svg class="w-4 h-4 me-3 inline flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z" />
+            </svg>
+            <span class="sr-only">Warning</span>
+            <div>
+                <span class="font-medium">@Title!</span> @Message
             </div>
-            break;
+        </div>
+        break;
 
-        case AlertType.Danger:
-            <div class="p-4 bg-[#ef4444] text-danger-foreground relative w-full rounded-lg border [&amp;>svg+div]:translate-y-[-3px] [&amp;>svg]:absolute [&amp;>svg]:left-4 [&amp;>svg]:top-4 [&amp;>svg]:text-foreground [&amp;>svg~*]:pl-7"
-                 role="alert">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="24"
-                     height="24"
-                     viewBox="0 0 24 24"
-                     fill="none"
-                     stroke="currentColor"
-                     stroke-width="2"
-                     stroke-linecap="round"
-                     stroke-linejoin="round"
-                     class="h-5 w-5 text-danger-foreground">
-                    <path d="M18 6 6 18"></path>
-                    <path d="m6 6 12 12"></path>
-                </svg>
+    case AlertType.Danger:
+        <div class="p-4 mb-4 text-red-800 border-red-300 bg-red-50 flex items-center rounded-lg border text-sm dark:bg-gray-800 dark:text-red-400 dark:border-red-800" role="alert">
+            <svg class="w-4 h-4 me-3 inline flex-shrink-0" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                <path d="M10 1.5a8.5 8.5 0 1 0 8.5 8.5A8.51 8.51 0 0 0 10 1.5Zm3.54 11.35a1 1 0 0 1-1.42 1.42L10 11.42l-2.12 2.12a1 1 0 0 1-1.42-1.42L8.58 10 6.46 7.88a1 1 0 0 1 1.42-1.42L10 8.58l2.12-2.12a1 1 0 0 1 1.42 1.42L11.42 10Z"/>
+            </svg>
+            <span class="sr-only">Danger</span>
+            <div>
+                <span class="font-medium">@Title!</span> @Message
             </div>
-            break;
-    }
-</div>
+        </div>
+        break;
+}
 
 @code
 {
@@ -101,9 +60,10 @@
     public string Title { get; set; }
 
     [Parameter, EditorRequired]
-    public string Content { get; set; }
+    public string Message { get; set; }
 
     protected override void OnInitialized()
     {
+
     }
 }
