--- a/src/EShop.WebApp/Layout/Mainlayout/MainLayout.razor
+++ b/src/EShop.WebApp/Layout/Mainlayout/MainLayout.razor
@@ -1,4 +1,8 @@
-﻿@inherits LayoutComponentBase
+﻿@using EShop.WebApp.Components.Common
+
+@inherits LayoutComponentBase
+
+<Alerts></Alerts>
 
 <div class="flex min-h-screen flex-col">
     <NavMenu></NavMenu>
