--- a/src/EShop.Presentation/EShop.WebApp/Components/Common/Pagination.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Common/Pagination.razor
@@ -1,6 +1,4 @@
-﻿@page "/page"
-
-<div class="border-gray-200 bg-white px-4 py-3 flex items-center justify-between border-t sm:px-6">
+﻿<div class="border-gray-200 bg-white px-4 py-3 flex items-center justify-between border-t sm:px-6">
     <div class="flex flex-1 justify-between sm:hidden">
         <a href="#" class="border-gray-300 bg-white px-4 py-2 text-gray-700 relative inline-flex items-center rounded-md border text-sm font-medium hover:bg-gray-50">Previous</a>
         <a href="#" class="ml-3 border-gray-300 bg-white px-4 py-2 text-gray-700 relative inline-flex items-center rounded-md border text-sm font-medium hover:bg-gray-50">Next</a>
@@ -11,7 +9,7 @@
                 Showing
                 <span class="font-medium">@CurrentPage</span>
                 to
-                <span class="font-medium">@TotalPage</span>
+                <span class="font-medium">@TotalItemOfCurrentPage</span>
                 of
                 <span class="font-medium">@TotalItem</span>
                 results
@@ -20,7 +18,7 @@
 
         <div>
             <nav class="-space-x-px isolate inline-flex rounded-md shadow-sm" aria-label="Pagination">
-                <a href="#" class="@(CurrentPage > 1 ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-l-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+                <a @onclick="async () => await ChangedPageEventCallback.InvokeAsync(CurrentPage-1)" href="#" class="@(CurrentPage > 1 ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-l-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
                     <span class="sr-only">Previous</span>
                     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
@@ -35,11 +33,19 @@
                     }
                     else
                     {
-                        <a href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">@pageIndex</a>
+                        <a @onclick="async () => await ChangedPageEventCallback.InvokeAsync(pageIndex)" href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">@pageIndex</a>
+                    }
+
+                    if (pageIndex == 10)
+                    {
+                        <a @onclick="async () => await ChangedPageEventCallback.InvokeAsync(pageIndex)" href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">...</a>
+                        break;
                     }
                 }
 
-                <a href="#" class="@(CurrentPage < TotalPage ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-r-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+                <a href="#"
+                   @onclick="async () => await ChangedPageEventCallback.InvokeAsync(CurrentPage+1)"
+                   class="@(CurrentPage < TotalPage ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-r-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
                     <span class="sr-only">Next</span>
                     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
@@ -57,6 +63,12 @@
     [Parameter, EditorRequired]
     public int TotalPage { get; set; }
 
-    [Parameter, EditorRequired] 
+    [Parameter, EditorRequired]
     public int TotalItem { get; set; }
+
+    [Parameter, EditorRequired]
+    public int TotalItemOfCurrentPage { get; set; }
+
+    [Parameter, EditorRequired]
+    public EventCallback<int> ChangedPageEventCallback { get; set; }
 }
