--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/FilterModal.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/FilterModal.razor
@@ -414,7 +414,7 @@
                                             </div>
 
                                             <div>
-                                                <h6 class="mb-2 text-black text-sm font-medium dark:text-white">Rating</h6>
+                                                <h6 class="mb-2 text-black text-sm font-medium dark:text-white">CountStar</h6>
                                                 <div class="space-y-2">
                                                     <div class="flex items-center">
                                                         <input id="five-stars" type="radio" value="" name="rating" class="h-4 w-4 border-gray-300 bg-gray-100 text-primary-600 focus:ring-2 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:ring-offset-gray-800 dark:focus:ring-primary-600" />
