--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
@@ -1,6 +1,8 @@
-﻿<div class="border-gray-200 bg-white p-6 rounded-lg border shadow-sm dark:border-gray-700 dark:bg-gray-800">
+﻿@using EShop.WebApp.Components.Common
+
+<div class="border-gray-200 bg-white p-6 rounded-lg border shadow-sm dark:border-gray-700 dark:bg-gray-800">
     <div class="h-56 w-full">
-        <a href="#">
+        <a href="@($"/detail/{ProductId}")">
             <img class="mx-auto h-full dark:hidden"
                  src="@ImageUrl" alt="" />
             <img class="mx-auto hidden h-full dark:block"
@@ -10,7 +12,7 @@
     <div class="pt-6">
         <div class="mb-4 gap-4 flex items-center justify-between">
             <span class="me-2 bg-blue-100 px-2.5 py-0.5 text-blue-800 rounded text-xs font-medium dark:bg-blue-900 dark:text-blue-300">
-                Up to 35% off
+                Up to @(Discount.ToString("F2"))% off
             </span>
 
             <div class="gap-1 flex items-center justify-end">
@@ -49,24 +51,16 @@
             </div>
         </div>
 
-        <a href="#" class="text-gray-900 text-lg font-semibold leading-tight hover:underline dark:text-white">
-            @*   Apple
-            iMac 27", 1TB HDD, Retina 5K Display, M3 Max *@
+        <a href="@($"/detail/{ProductId}")" class="text-gray-900 text-lg font-semibold leading-tight hover:underline dark:text-white">
             @ProductName
         </a>
 
         <div class="mt-2 gap-2 flex items-center">
             <div class="flex items-center">
-                @for (var i = 0; i < Rating; i++)
-                {
-                    <svg class="h-4 w-4 text-yellow-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                         fill="currentColor" viewBox="0 0 24 24">
-                        <path d="M13.8 4.2a2 2 0 0 0-3.6 0L8.4 8.4l-4.6.3a2 2 0 0 0-1.1 3.5l3.5 3-1 4.4c-.5 1.7 1.4 3 2.9 2.1l3.9-2.3 3.9 2.3c1.5 1 3.4-.4 3-2.1l-1-4.4 3.4-3a2 2 0 0 0-1.1-3.5l-4.6-.3-1.8-4.2Z" />
-                    </svg>
-                }
+                <Rating Max="5" ValueStar="Convert.ToInt32(CountStar)"></Rating>
             </div>
 
-            <p class="text-gray-900 text-sm font-medium dark:text-white">@Rating</p>
+            <p class="text-gray-900 text-sm font-medium dark:text-white">@CountStar</p>
             <p class="text-gray-500 text-sm font-medium dark:text-gray-400">(@RatingCount)</p>
         </div>
 
@@ -112,14 +106,17 @@
     public string ProductName { get; set; }
 
     [Parameter, EditorRequired]
-    public int Rating { get; set; }
+    public double CountStar { get; set; }
 
     [Parameter, EditorRequired]
     public int RatingCount { get; set; }
 
     [Parameter, EditorRequired]
-    public string Price { get; set; }
+    public double Price { get; set; }
 
     [Parameter, EditorRequired]
     public string ImageUrl { get; set; }
+
+    [Parameter, EditorRequired]
+    public double Discount { get; set; }
 }
