--- a/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/Order/Summary.razor
@@ -508,7 +508,7 @@
                     <div>
                         <div class="mb-2 gap-2 flex items-center">
                             <label for="select_country_input_billing_modal"
-                                class="text-gray-900 block text-sm font-medium dark:text-white"> Country* </label>
+                                class="text-gray-900 block text-sm font-medium dark:text-white"> Totalry* </label>
                         </div>
                         <select id="select_country_input_billing_modal"
                             class="border-gray-300 bg-gray-50 p-2.5 text-gray-900 block w-full rounded-lg border text-sm focus:border-primary-500 focus:ring-primary-500 dark:border-gray-600 dark:bg-gray-700 dark:text-white dark:placeholder:text-gray-400 dark:focus:border-primary-500 dark:focus:ring-primary-500">
