--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/Register.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/Register.razor
@@ -11,6 +11,7 @@
 
 @inject AlertState AlertState
 @inject IIdentityService IdentityService
+@inject NavigationManager _navManager
 
 <div class="px-6 py-12 flex min-h-full flex-col justify-center lg:px-8">
     <div class="sm:mx-auto sm:w-full sm:max-w-sm">
@@ -25,7 +26,7 @@
             <div>
                 <label for="email" class="text-gray-900 block text-sm font-medium leading-6">Email address</label>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_registerRequest.Email" id="email" name="email" type="email" autocomplete="email" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
+                    <InputText @bind-Value="@_registerRequest.Email" id="email" name="email" type="email" autocomplete="email" required class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
                     <ValidationMessage For="() => _registerRequest.Email"></ValidationMessage>
                 </div>
             </div>
@@ -35,7 +36,7 @@
                     <label for="password" class="text-gray-900 block text-sm font-medium leading-6">Password</label>
                 </div>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_registerRequest.Password" id="password" name="password" type="password" autocomplete="current-password" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> </InputText>
+                    <InputText @bind-Value="@_registerRequest.Password" id="password" name="password" type="password" autocomplete="current-password" required class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> </InputText>
                     <ValidationMessage For="() => _registerRequest.Password"></ValidationMessage>
                 </div>
             </div>
@@ -73,7 +74,7 @@
                     Title = "Success",
                     Type = AlertType.Success
                 });
-
+            _navManager.NavigateTo("sign-in");
             return;
         }
         AlertState.AddMessage(new AlertItem
