--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/ResetPassword.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/ResetPassword.razor
@@ -26,7 +26,7 @@
             <div>
                 <label for="email" class="text-gray-900 block text-sm font-medium leading-6">Enter your email address</label>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_resetPasswordRequest.Email" id="email" autocomplete="email" class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
+                    <InputText @bind-Value="@_resetPasswordRequest.Email" id="email" autocomplete="email" class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
                     <ValidationMessage For="() => _resetPasswordRequest.Email"></ValidationMessage>
                 </div>
             </div>
@@ -34,7 +34,7 @@
             <div>
                 <label for="new-password" class="text-gray-900 block text-sm font-medium leading-6">Enter your email address</label>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_resetPasswordRequest.NewPassword" id="new-password" class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
+                    <InputText @bind-Value="@_resetPasswordRequest.NewPassword" id="new-password" class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
                     <ValidationMessage For="() => _resetPasswordRequest.Email"></ValidationMessage>
                 </div>
             </div>
@@ -42,7 +42,7 @@
             <div>
                 <label for="reset-code" class="text-gray-900 block text-sm font-medium leading-6">Enter your email address</label>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_resetPasswordRequest.Email" id="reset-code" class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
+                    <InputText @bind-Value="@_resetPasswordRequest.Email" id="reset-code" class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
                     <ValidationMessage For="() => _resetPasswordRequest.ResetCode"></ValidationMessage>
                 </div>
             </div>
