--- a/src/EShop.Presentation/EShop.WebApp/Pages/User/SignIn.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Pages/User/SignIn.razor
@@ -26,7 +26,7 @@
             <div>
                 <label for="email" class="text-gray-900 block text-sm font-medium leading-6">Email address</label>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_signInRequest.Email" id="email" name="email" type="email" autocomplete="email" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
+                    <InputText @bind-Value="@_signInRequest.Email" id="email" name="email" type="email" autocomplete="email" required class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"></InputText>
                     <ValidationMessage For="() => _signInRequest.Email"></ValidationMessage>
                 </div>
             </div>
@@ -39,7 +39,7 @@
                     </div>
                 </div>
                 <div class="mt-2">
-                    <InputText @bind-Value="@_signInRequest.Password" id="password" name="password" type="password" autocomplete="current-password" required class="py-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> </InputText>
+                    <InputText @bind-Value="@_signInRequest.Password" id="password" name="password" type="password" autocomplete="current-password" required class="py-1.5 px-1.5 text-gray-900 ring-gray-300 block w-full rounded-md border-0 shadow-sm ring-1 ring-inset placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6"> </InputText>
                     <ValidationMessage For="() => _signInRequest.Password"></ValidationMessage>
                 </div>
             </div>
