--- a/src/EShop.Presentation/EShop.WebApp/Components/Common/Pagination.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Common/Pagination.razor
@@ -7,7 +7,7 @@
         <div>
             <p class="text-gray-700 text-sm">
                 Showing
-                <span class="font-medium">@CurrentPage</span>
+                <span class="font-medium">@PageIndex</span>
                 to
                 <span class="font-medium">@TotalItemOfCurrentPage</span>
                 of
@@ -18,34 +18,34 @@
 
         <div>
             <nav class="-space-x-px isolate inline-flex rounded-md shadow-sm" aria-label="Pagination">
-                <a @onclick="async () => await ChangedPageEventCallback.InvokeAsync(CurrentPage-1)" href="#" class="@(CurrentPage > 1 ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-l-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+                <a @onclick="async () => await PageChangedEventCallback.InvokeAsync(PageIndex-1)" href="#" class="@(PageIndex > 1 ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-l-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
                     <span class="sr-only">Previous</span>
                     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M12.79 5.23a.75.75 0 01-.02 1.06L8.832 10l3.938 3.71a.75.75 0 11-1.04 1.08l-4.5-4.25a.75.75 0 010-1.08l4.5-4.25a.75.75 0 011.06.02z" clip-rule="evenodd" />
                     </svg>
                 </a>
 
-                @for (var pageIndex = 1; pageIndex <= TotalPage; pageIndex++)
+                @for (var pageIndex = PageIndex; pageIndex <= PageIndex + 10; pageIndex++)
                 {
-                    if (pageIndex == CurrentPage)
+                    if (pageIndex == PageIndex)
                     {
                         <a href="#" aria-current="page" class="bg-indigo-600 px-4 py-2 text-white relative z-10 inline-flex items-center text-sm font-semibold focus:z-20 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">@pageIndex</a>
                     }
                     else
                     {
-                        <a @onclick="async () => await ChangedPageEventCallback.InvokeAsync(pageIndex)" href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">@pageIndex</a>
+                        <a @onclick="async () => await PageChangedEventCallback.InvokeAsync(pageIndex)" href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">@pageIndex</a>
                     }
 
-                    if (pageIndex == 10)
+                    if (pageIndex == PageIndex + 10)
                     {
-                        <a @onclick="async () => await ChangedPageEventCallback.InvokeAsync(pageIndex)" href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">...</a>
+                        <a @onclick="async () => await PageChangedEventCallback.InvokeAsync(pageIndex)" href="#" class="px-4 py-2 text-gray-900 ring-gray-300 relative inline-flex items-center text-sm font-semibold ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">...</a>
                         break;
                     }
                 }
 
                 <a href="#"
-                   @onclick="async () => await ChangedPageEventCallback.InvokeAsync(CurrentPage+1)"
-                   class="@(CurrentPage < TotalPage ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-r-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+                   @onclick="async () => await PageChangedEventCallback.InvokeAsync(PageIndex+1)"
+                   class="@(PageIndex < TotalPage ? "" : "disabled:opacity-50") px-2 py-2 text-gray-400 ring-gray-300 relative inline-flex items-center rounded-r-md ring-1 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
                     <span class="sr-only">Next</span>
                     <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                         <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
@@ -57,8 +57,11 @@
 </div>
 
 @code {
-    [Parameter, EditorRequired]
-    public int CurrentPage { get; set; }
+    [Parameter]
+    public int PageIndex { get; set; }
+
+    [Parameter]
+    public EventCallback<int> PageIndexEventChanged { get; set; }
 
     [Parameter, EditorRequired]
     public int TotalPage { get; set; }
@@ -70,5 +73,5 @@
     public int TotalItemOfCurrentPage { get; set; }
 
     [Parameter, EditorRequired]
-    public EventCallback<int> ChangedPageEventCallback { get; set; }
+    public EventCallback<int> PageChangedEventCallback { get; set; }
 }
