--- a/src/EShop.Presentation/EShop.WebApp/Layout/Mainlayout/NavMenu.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Layout/Mainlayout/NavMenu.razor
@@ -84,74 +84,80 @@
                     <a href="/checkout" title="" class="mb-2 me-2 bg-blue-700 px-5 py-2.5 text-white inline-flex w-full items-center justify-center rounded-lg text-sm font-medium hover:bg-primary-800 focus:outline-none focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800" role="button"> Proceed to Checkout </a>
                 </div>
 
-                <a href="/register"
-                   id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-lg text-sm font-medium leading-none hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">
-                    <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                    </svg>
-                    Register
-                </a>
 
-                <a href="/sign-in"
-                   id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-lg text-sm font-medium leading-none hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">
-                    <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                    </svg>
-                    Sign in
-                </a>
-                
-             @*    <button @onclick="() => _showDropdownAccount = !_showDropdownAccount"
-                        id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-lg text-sm font-medium leading-none hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">
-                    <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
-                    </svg>
-                    Account
-                    <svg class="w-4 h-4 text-gray-900 ms-1 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 9-7 7-7-7" />
-                    </svg>
-                </button>
+                <AuthorizeView>
+                    <Authorized>
+                        <button @onclick="() => _showDropdownAccount = !_showDropdownAccount"
+                                id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-lg text-sm font-medium leading-none hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">
+                            <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                            Account
+                            <svg class="w-4 h-4 text-gray-900 ms-1 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 9-7 7-7-7" />
+                            </svg>
+                        </button>
 
-                <div id="userDropdown1" class="@(_showDropdownAccount? "": "hidden") w-56 divide-gray-100 bg-white absolute absolute z-10 divide-y overflow-hidden overflow-y-auto rounded-lg antialiased shadow dark:divide-gray-600 dark:bg-gray-700"
-                     style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(1156.8px, 68px, 0px);">
-                    <ul class="p-2 text-gray-900 text-start text-sm font-medium dark:text-white">
-                        <li>
-                            <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                                My Account
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                                My Orders
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                                Settings
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                                Favourites
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                                Delivery Addresses
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                                Billing Data
-                            </a>
-                        </li>
-                    </ul>
+                        <div id="userDropdown1" class="@(_showDropdownAccount? "": "hidden") w-56 divide-gray-100 bg-white absolute absolute z-10 divide-y overflow-hidden overflow-y-auto rounded-lg antialiased shadow dark:divide-gray-600 dark:bg-gray-700"
+                             style="position: absolute; inset: 0px auto auto 0px; margin: 0px; transform: translate3d(1156.8px, 68px, 0px);">
+                            <ul class="p-2 text-gray-900 text-start text-sm font-medium dark:text-white">
+                                <li>
+                                    <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                        My Account
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                        My Orders
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                        Settings
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                        Favourites
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                        Delivery Addresses
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                        Billing Data
+                                    </a>
+                                </li>
+                            </ul>
 
-                    <div class="p-2 text-gray-900 text-sm font-medium dark:text-white">
-                        <a href="/sign-in" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
-                            Sign Out
+                            <div class="p-2 text-gray-900 text-sm font-medium dark:text-white">
+                                <a href="/sign-in" title="" class="gap-2 px-3 py-2 inline-flex w-full items-center rounded-md text-sm hover:bg-gray-100 dark:hover:bg-gray-600">
+                                    Sign Out
+                                </a>
+                            </div>
+                        </div>
+                    </Authorized>
+                    <NotAuthorized>
+                        <a href="/register"
+                           id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-lg text-sm font-medium leading-none hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">
+                            <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                            Register
                         </a>
-                    </div>
-                </div> *@
+
+                        <a href="/sign-in"
+                           id="userDropdownButton1" data-dropdown-toggle="userDropdown1" type="button" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-lg text-sm font-medium leading-none hover:bg-gray-100 dark:text-white dark:hover:bg-gray-700">
+                            <svg class="w-5 h-5 me-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                <path stroke="currentColor" stroke-width="2" d="M7 17v1a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1a3 3 0 0 0-3-3h-4a3 3 0 0 0-3 3Zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+                            </svg>
+                            Sign in
+                        </a>
+                    </NotAuthorized>
+                </AuthorizeView>
 
                 <button type="button" data-collapse-toggle="ecommerce-navbar-menu-1" aria-controls="ecommerce-navbar-menu-1" aria-expanded="false" class="p-2 text-gray-900 inline-flex items-center justify-center rounded-md hover:bg-gray-100 dark:text-white lg:hidden dark:hover:bg-gray-700">
                     <span class="sr-only">
