--- a/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
+++ b/src/EShop.Presentation/EShop.WebApp/Components/Product/ProductCart.razor
@@ -1,6 +1,6 @@
 ﻿@using EShop.WebApp.Components.Common
 
-<div class="border-gray-200 bg-white p-6 rounded-lg border shadow-sm dark:border-gray-700 dark:bg-gray-800">
+<div class="border-gray-200 bg-white p-6 flex flex-col justify-around rounded-lg border shadow-sm dark:border-gray-700 dark:bg-gray-800">
     <div class="h-56 w-full">
         <a href="@($"/detail/{ProductId}")">
             <img class="mx-auto h-full dark:hidden"
@@ -85,7 +85,7 @@
         </ul>
 
         <div class="mt-4 gap-4 flex items-center justify-between">
-            <p class="text-gray-900 text-2xl font-extrabold leading-tight dark:text-white">@Price</p>
+            <p class="text-gray-900 text-2xl font-extrabold leading-tight dark:text-white">$@Price</p>
 
             <button type="button" class="bg-blue-700 px-5 py-2.5 text-white inline-flex items-center rounded-lg text-sm font-medium hover:bg-blue-800 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
                 <svg class="-ms-2 me-2 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
